fix: align workflow execution columns so metrics are flush with the to. Also fix issue where metrics all expanded when one was selected to expand. Now it's each individual one.

--- a/src/styles/flex-styles.scss
+++ b/src/styles/flex-styles.scss
@@ -30,6 +30,10 @@
   align-items: center;
 }
 
+.align-items-flex-start {
+  align-items: flex-start;
+}
+
 .justify-content-between {
   justify-content: space-between;
 }
@@ -37,6 +41,7 @@
 .justify-content-center {
   justify-content: center;
 }
+
 
 @for $i from 1 through 10 {
   .flex-grow-#{$i} {
